Added differentiable optimization for a few distance metrics

--- a/examples/stochastic_process_metrics.ipynb
+++ b/examples/stochastic_process_metrics.ipynb
@@ -2,16 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 165,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "# %%\n",
     "\"\"\"\n",
     "Tests metrics betwen stochastic process neural representations.\n",
     "\"\"\"\n",
     "import numpy as np\n",
-    "from netrep.metrics import GPStochasticMetric,GaussianStochasticMetric\n",
+    "from netrep.metrics import GPStochasticMetric,GaussianStochasticMetric,GPStochasticDiff\n",
     "from netrep.utils import rand_orth\n",
     "from sklearn.utils.validation import check_random_state\n",
     "from sklearn.covariance import EmpiricalCovariance\n",
@@ -25,13 +34,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "TOL = 1e-6\n",
-    "\n",
     "# %% Class for sampling from a gaussian process given a kernel\n",
     "class GaussianProcess:\n",
     "    def __init__(self,kernel,D):\n",
@@ -57,20 +63,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "DSSD:  5.637851296924623e-18 , Adapted DSSD:  0.22862959061219798 , Marginal SSD:  -1.5208433958286904e-09 , Full SSD:  5.5241547758127784e-05\n"
+      "[[ 0.87442883 -0.48515381]\n",
+      " [ 0.48515381  0.87442883]]\n"
      ]
     }
    ],
    "source": [
     "seed = 0\n",
-    "t = 3\n",
+    "t = 4\n",
     "n = 2\n",
     "k = 100\n",
     "\n",
@@ -78,6 +85,7 @@
     "rs = check_random_state(seed)\n",
     "Q = rand_orth(n, n, random_state=rs)\n",
     "\n",
+    "print(Q)\n",
     "# Generate data from a gaussian process with RBF kernel\n",
     "ts = np.linspace(0,1,t)\n",
     "gpA = GaussianProcess(\n",
@@ -92,43 +100,131 @@
     "B = [\n",
     "    np.kron(np.eye(t),Q)@A[0],\n",
     "    np.kron(np.eye(t),Q)@A[1]@(np.kron(np.eye(t),Q)).T\n",
-    "]\n",
+    "]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 169,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DSSD:  -1.0536712127723509e-08 , Marginal SSD:  1.862645149230957e-09\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Using bi-level optimizatioon and Orthogonal Procrustes\n",
     "\n",
     "# Compute DSSD\n",
     "metric = GPStochasticMetric(n_dims=n,group=\"orth\")\n",
-    "\n",
     "dssd = metric.fit_score(A,B)\n",
     "\n",
-    "# Compute Adapted DSSD\n",
-    "metric = GPStochasticMetric(n_dims=n,group=\"orth\",type=\"adapted\")\n",
-    "\n",
-    "adssd = metric.fit_score(A,B)\n",
     "\n",
     "# Compute marginal SSD\n",
     "metric = GaussianStochasticMetric(group=\"orth\")\n",
-    "\n",
     "A_marginal = [\n",
     "    A[0].reshape(t,n),\n",
     "    np.array([A[1][i*n:(i+1)*n,i*n:(i+1)*n] for i in range(t)])\n",
     "]\n",
-    "\n",
     "B_marginal = [\n",
     "    B[0].reshape(t,n),\n",
     "    np.array([B[1][i*n:(i+1)*n,i*n:(i+1)*n] for i in range(t)])\n",
     "]\n",
+    "mssd = metric.fit_score(A_marginal,B_marginal)\n",
     "\n",
-    "marginal_ssd = metric.fit_score(A_marginal,B_marginal)\n",
+    "print('DSSD: ', dssd, ', Marginal SSD: ', mssd)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 174,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4d990497410044ba871bebafa9684b78",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8de6d861612a4b29bbc6891b7f250659",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1ed1518934534442856c463ca56e5ae0",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "772f57438b0d40a0b0c464d10d7d7d06",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DSSD:  0.0010164244 , Adapted DSSD:  0.0012221799 , Marginal SSD:  0.001345977 , Knothe Rosenblatt SSD:  0.00032661887\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Using differentiable optimization and Cayley orthogonal parameterization\n",
     "\n",
-    "# Compute full SSD\n",
-    "metric = GaussianStochasticMetric(group=\"orth\",init=\"rand\",n_restarts=50)\n",
+    "metric = GPStochasticDiff(n_dims=n,n_times=t,type=\"Bures\")\n",
+    "dssd = metric.fit_score(A,B,lr=1e-3,tol=1e-6,epsilon=1e-6)\n",
     "\n",
-    "A_full = [A[0][None],A[1][None]]\n",
-    "B_full = [B[0][None],B[1][None]]\n",
+    "metric = GPStochasticDiff(n_dims=n,n_times=t,type=\"Adapted_Bures\")\n",
+    "assd = metric.fit_score(A,B,lr=1e-3,tol=1e-6,epsilon=1e-6)\n",
     "\n",
-    "full_ssd = metric.fit_score(A_full,B_full)\n",
+    "metric = GPStochasticDiff(n_dims=n,n_times=t,type=\"Knothe_Rosenblatt\")\n",
+    "kssd = metric.fit_score(A,B,lr=1e-3,tol=1e-6,epsilon=1e-6)\n",
     "\n",
+    "metric = GPStochasticDiff(n_dims=n,n_times=t,type=\"Marginal_Bures\")\n",
+    "mssd = metric.fit_score(A,B,lr=1e-3,tol=1e-6,epsilon=1e-6)\n",
     "\n",
-    "print('DSSD: ', dssd, ', Adapted DSSD: ', adssd, ', Marginal SSD: ', marginal_ssd, ', Full SSD: ', full_ssd)\n"
+    "print('DSSD: ', dssd, ', Adapted DSSD: ', assd, ', Marginal SSD: ', mssd, ', Knothe Rosenblatt SSD: ', kssd)\n",
+    "\n"
    ]
   }
  ],
