--- a/examples/stochastic_process_metrics.ipynb
+++ b/examples/stochastic_process_metrics.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
+      "/mnt/home/anejatbakhsh/anaconda3/envs/netrep/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     }
    ],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,29 +63,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[ 0.87442883 -0.48515381]\n",
-      " [ 0.48515381  0.87442883]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "seed = 0\n",
-    "t = 4\n",
+    "t = 5\n",
     "n = 2\n",
     "k = 100\n",
     "\n",
     "# Set random seed, draw random rotation\n",
     "rs = check_random_state(seed)\n",
-    "Q = rand_orth(n, n, random_state=rs)\n",
-    "\n",
-    "print(Q)\n",
+    "if n > 1:\n",
+    "    Q = rand_orth(n, n, random_state=rs)\n",
+    "else:\n",
+    "    Q = 1\n",
+    "    \n",
     "# Generate data from a gaussian process with RBF kernel\n",
     "ts = np.linspace(0,1,t)\n",
     "gpA = GaussianProcess(\n",
@@ -100,31 +93,37 @@
     "B = [\n",
     "    np.kron(np.eye(t),Q)@A[0],\n",
     "    np.kron(np.eye(t),Q)@A[1]@(np.kron(np.eye(t),Q)).T\n",
-    "]\n"
+    "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "DSSD:  -1.0536712127723509e-08 , Marginal SSD:  1.862645149230957e-09\n"
+      "DSSD:  -7.450580596923828e-09 , Marginal SSD:  0.0 , Adapted SSD:  9.125060374972147e-09\n"
      ]
     }
    ],
    "source": [
-    "# Using bi-level optimizatioon and Orthogonal Procrustes\n",
-    "\n",
-    "# Compute DSSD\n",
+    "# Using alternating optimization and Orthogonal Procrustes\n",
+    "# Compute dSSD\n",
     "metric = GPStochasticMetric(n_dims=n,group=\"orth\")\n",
     "dssd = metric.fit_score(A,B)\n",
     "\n",
+    "# Compute aSSD\n",
+    "metric = GPStochasticMetric(\n",
+    "    n_dims=n,\n",
+    "    group=\"orth\",\n",
+    "    type='adapted',\n",
+    ")\n",
+    "assd = metric.fit_score(A,B)\n",
     "\n",
-    "# Compute marginal SSD\n",
+    "# Compute mSSD\n",
     "metric = GaussianStochasticMetric(group=\"orth\")\n",
     "A_marginal = [\n",
     "    A[0].reshape(t,n),\n",
@@ -136,75 +135,36 @@
     "]\n",
     "mssd = metric.fit_score(A_marginal,B_marginal)\n",
     "\n",
-    "print('DSSD: ', dssd, ', Marginal SSD: ', mssd)"
+    "print('DSSD: ', dssd, ', Marginal SSD: ', mssd, ', Adapted SSD: ', assd)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4d990497410044ba871bebafa9684b78",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "0it [00:00, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8de6d861612a4b29bbc6891b7f250659",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "0it [00:00, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1ed1518934534442856c463ca56e5ae0",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "0it [00:00, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "772f57438b0d40a0b0c464d10d7d7d06",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "0it [00:00, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Iteration 700, loss 0.04: : 0it [00:01, ?it/s]\n",
+      "Iteration 200, loss 0.00: : 0it [00:00, ?it/s]\n",
+      "Iteration 200, loss 0.00: : 0it [00:00, ?it/s]\n",
+      "Iteration 700, loss 0.01: : 0it [00:02, ?it/s]"
+     ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "DSSD:  0.0010164244 , Adapted DSSD:  0.0012221799 , Marginal SSD:  0.001345977 , Knothe Rosenblatt SSD:  0.00032661887\n"
+      "DSSD:  0.03943214 , Adapted DSSD:  0.0023483392 , Marginal SSD:  0.005165683 , Knothe Rosenblatt SSD:  0.0023267935\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
@@ -212,19 +172,18 @@
     "# Using differentiable optimization and Cayley orthogonal parameterization\n",
     "\n",
     "metric = GPStochasticDiff(n_dims=n,n_times=t,type=\"Bures\")\n",
-    "dssd = metric.fit_score(A,B,lr=1e-3,tol=1e-6,epsilon=1e-6)\n",
+    "dssd = metric.fit_score(A,B,lr=1e-3,tol=1e-5,epsilon=1e-6)\n",
     "\n",
     "metric = GPStochasticDiff(n_dims=n,n_times=t,type=\"Adapted_Bures\")\n",
-    "assd = metric.fit_score(A,B,lr=1e-3,tol=1e-6,epsilon=1e-6)\n",
+    "assd = metric.fit_score(A,B,lr=1e-3,tol=1e-5,epsilon=1e-6)\n",
     "\n",
     "metric = GPStochasticDiff(n_dims=n,n_times=t,type=\"Knothe_Rosenblatt\")\n",
-    "kssd = metric.fit_score(A,B,lr=1e-3,tol=1e-6,epsilon=1e-6)\n",
+    "kssd = metric.fit_score(A,B,lr=1e-3,tol=1e-5,epsilon=1e-6)\n",
     "\n",
     "metric = GPStochasticDiff(n_dims=n,n_times=t,type=\"Marginal_Bures\")\n",
-    "mssd = metric.fit_score(A,B,lr=1e-3,tol=1e-6,epsilon=1e-6)\n",
+    "mssd = metric.fit_score(A,B,lr=1e-3,tol=1e-5,epsilon=1e-6)\n",
     "\n",
-    "print('DSSD: ', dssd, ', Adapted DSSD: ', assd, ', Marginal SSD: ', mssd, ', Knothe Rosenblatt SSD: ', kssd)\n",
-    "\n"
+    "print('DSSD: ', dssd, ', Adapted DSSD: ', assd, ', Marginal SSD: ', mssd, ', Knothe Rosenblatt SSD: ', kssd)"
    ]
   }
  ],
@@ -244,7 +203,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.18"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
